[project]
name = "smart-qa-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.14.0",
    "modelscope>=1.36.3",
    "openai>=2.35.1",
    "pandas>=3.0.2",
    "faiss-cpu>=1.8.0",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "matplotlib>=3.10.9",
]
